App: avoid inconsistent width due to the scrollbar

--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -14,4 +14,5 @@ body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
+  overflow-y: scroll;
 }
